apply plugin: "java"
apply plugin: "maven-publish"

sourceCompatibility = 11
targetCompatibility = 11

group = 'com.elovirta.dita'
version = "5.3.0"

repositories {
    mavenCentral()
}

dependencies {
    implementation group: "org.dita-ot", name: "dost", version: "[3.4,4.0)"
    implementation(group: "com.vladsch.flexmark", name: "flexmark-all", version: "0.64.0") {
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-profile-pegdown'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-abbreviation'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-admonition'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-anchorlink'
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-aside'
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-emoji'
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-enumerated-reference'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-attributes'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-autolink'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-definition'
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-html2md-converter'
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-escaped-character'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-footnotes'
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-jira-converter'
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-youtrack-converter'
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-gfm-issues'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-gfm-strikethrough'
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-gfm-tasklist'
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-gfm-users'
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-macros'
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-gitlab'
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-jekyll-front-matter'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-jekyll-tag'
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-media-tags'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-ins'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-superscript'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-tables'
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-toc'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-typographic'
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-wikilink'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-yaml-front-matter'
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-youtube-embedded'
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-ext-xwiki-macros'
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-pdf-converter'
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-util'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-util-format'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-util-ast'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-util-builder'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-util-dependency'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-util-html'
        exclude group: 'com.vladsch.flexmark', module: 'flexmark-util-options'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-util-sequence'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-util-collection'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-util-data'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-util-misc'
//        exclude group: 'com.vladsch.flexmark', module: 'flexmark-util-visitor'
    }
    implementation(group: 'com.google.guava', name: 'guava', version: '25.1-jre') {
        exclude group: 'org.checkerframework', module: 'checker-qual'
        exclude group: 'org.codehaus.mojo', module: 'animal-sniffer-annotations'
        exclude group: 'com.google.code.findbugs', module: 'jsr305'
        exclude group: 'com.google.errorprone', module: 'error_prone_annotations'
        exclude group: 'com.google.j2objc', module: 'j2objc-annotations'
    }
    implementation group: 'nu.validator.htmlparser', name: 'htmlparser', version: '1.4'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.9.2'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.9.2'
    testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
    testImplementation group: 'org.xmlunit', name: 'xmlunit-core', version: '2.9.1'
}

task dist(type: Zip) {
    from(jar) {
        into "lib"
    }
    from(configurations.runtimeClasspath.allArtifacts.files) {
        into "lib"
    }
    from(configurations.runtimeClasspath) {
        include { details -> details.file.name.contains('flexmark') }
        exclude { details -> details.file.name.contains('flexmark-all') }
//        exclude { details -> details.file.name.contains('flexmark-ext-emoji') }
//        exclude { details -> details.file.name.contains('flexmark-ext-gfm-issues') }
//        exclude { details -> details.file.name.contains('flexmark-ext-gfm-users') }
//        exclude { details -> details.file.name.contains('flexmark-ext-xwiki-macros') }
//        exclude { details -> details.file.name.contains('flexmark-pdf') }
        include { details -> details.file.name.contains('autolink') }
        include { details -> details.file.name.contains('htmlparser') }
        into "lib"
    }
    from("src/main") {
        include "plugin.xml"
        expand(
                id: project.name,
                version: project.version
        )
    }
    from("src/main") {
        include "build-*_template.xml"
        include "conductor.xml"
        // Template generated files
        exclude "build.xml"
    }
    from("src/main/resources") {
        include "*.xsl"
        exclude "specialize.xsl"
        // Template generated files
        exclude "dita2markdown.xsl"
        exclude "map2markdown-cover.xsl"
        rename '(.*)', 'xsl/$1'
    }
    from("licenses") {
        include "*.txt"
        into "lib"
    }
    from(".") {
        include "LICENSE"
    }
    from(".") {
        include "NOTICES"
        expand(
                year: new Date().format('yyyy')
        )
    }
    archiveName "${project.name}-${project.version}.zip"
}

publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = "https://maven.pkg.github.com/jelovirt/org.lwdita"
            credentials {
                username = System.getenv("GITHUB_ACTOR")
                password = System.getenv("GITHUB_TOKEN")
            }
        }
    }
    publications {
        gpr(MavenPublication) {
            from(components.java)
        }
    }
}
